Add secure settings, and clean up list tests