@@ -7,6 +7,7 @@
 package org.elasticsearch.xpack.security.authc.jwt;
 
 import org.elasticsearch.common.settings.MockSecureSettings;
+import org.elasticsearch.common.settings.SecureString;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
@@ -21,25 +22,22 @@ import org.elasticsearch.xpack.core.security.authc.support.DelegatedAuthorizatio
 import org.elasticsearch.xpack.core.ssl.SSLConfigurationSettings;
 import org.junit.Before;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.Set;
 
 import static org.hamcrest.Matchers.equalTo;
 
 public class JwtRealmSettingsTests extends ESTestCase {
 
-    private static final String REALM_NAME = "jwt1-realm";
+    private static final String REALM_NAME = "jwt1";
+    private String pathHome;
     private ThreadContext threadContext;
 
     @Before
     public void setupEnv() {
-        Settings globalSettings = Settings.builder().put("path.home", createTempDir()).build();
-        threadContext = new ThreadContext(globalSettings);
-    }
-
-    public void testAllSettings() {
-        final RealmConfig realmConfig = getMockWorkingSettings();
-        JwtRealmSettingsTests.validateSettings(realmConfig, JwtRealmSettings.getSettings());
+        this.pathHome = createTempDir().toString();
+        final Settings globalSettings = Settings.builder().put("path.home", this.pathHome).build();
+        this.threadContext = new ThreadContext(globalSettings);
     }
 
     public void testAllowedIssuer() {
@@ -61,9 +59,8 @@ public class JwtRealmSettingsTests extends ESTestCase {
     }
 
     public void testAllowedSignatureAlgorithms() {
-        Setting.AffixSetting<List<String>> setting = JwtRealmSettings.ALLOWED_SIGNATURE_ALGORITHMS;
+        final Setting.AffixSetting<List<String>> setting = JwtRealmSettings.ALLOWED_SIGNATURE_ALGORITHMS;
         final String settingKey = RealmSettings.getFullSettingKey(REALM_NAME, setting);
-        final String allCsv = "HS256, HS384, HS512, RS256, RS384, RS512, ES256, ES384, ES512, PS256, PS384, PS512";
         for (final String rejectedValue : new String[] { "unknown", "HS256,unknown" }) {
             final Exception exception = expectThrows(IllegalArgumentException.class, () -> {
                 final Settings settings = Settings.builder().put(settingKey, rejectedValue).build();
@@ -72,7 +69,14 @@ public class JwtRealmSettingsTests extends ESTestCase {
             });
             assertThat(
                 exception.getMessage(),
-                equalTo("Invalid value [unknown] for [" + settingKey + "]." + " Allowed values are [" + allCsv + "]}].")
+                equalTo(
+                    "Invalid value [unknown] for ["
+                        + settingKey
+                        + "]."
+                        + " Allowed values are "
+                        + JwtRealmSettings.SUPPORTED_SIGNATURE_ALGORITHMS
+                        + "}]."
+                )
             );
         }
         for (final String ignoredValue : new String[] { null, "" }) {
@@ -80,15 +84,16 @@ public class JwtRealmSettingsTests extends ESTestCase {
             final List<String> actualValue = this.buildConfig(settings).getSetting(setting);
             assertThat(actualValue, equalTo(setting.getDefault(settings)));
         }
-        for (final String acceptedValue : List.of(allCsv)) {
+        final String allAcceptedValues = JwtRealmSettings.SUPPORTED_SIGNATURE_ALGORITHMS.toString().replaceAll("[\\[\\] ]", "");
+        for (final String acceptedValue : List.of("HS256", "HS512,RS512", allAcceptedValues)) {
             final Settings settings = Settings.builder().put(settingKey, acceptedValue).build();
             final List<String> actualValue = this.buildConfig(settings).getSetting(setting);
-            assertThat(actualValue, equalTo(JwtRealmSettings.SUPPORTED_SIGNATURE_ALGORITHMS));
+            assertThat(actualValue, equalTo(Arrays.asList(acceptedValue.split(",", -1))));
         }
     }
 
     public void testJwtPath() {
-        Setting.AffixSetting<String> setting = JwtRealmSettings.JWKSET_PATH;
+        final Setting.AffixSetting<String> setting = JwtRealmSettings.JWKSET_PATH;
         final String settingKey = RealmSettings.getFullSettingKey(REALM_NAME, setting);
         for (final String rejectedValue : new String[] { null, "" }) {
             final Exception exception = expectThrows(IllegalArgumentException.class, () -> {
@@ -106,7 +111,7 @@ public class JwtRealmSettingsTests extends ESTestCase {
     }
 
     public void testAllowedAudiences() {
-        Setting.AffixSetting<List<String>> setting = JwtRealmSettings.ALLOWED_AUDIENCES;
+        final Setting.AffixSetting<List<String>> setting = JwtRealmSettings.ALLOWED_AUDIENCES;
         final String settingKey = RealmSettings.getFullSettingKey(REALM_NAME, setting);
         for (final String rejectedValue : new String[] { null, "" }) {
             final Exception exception = expectThrows(IllegalArgumentException.class, () -> {
@@ -116,10 +121,10 @@ public class JwtRealmSettingsTests extends ESTestCase {
             });
             assertThat(exception.getMessage(), equalTo("Invalid null or empty value for [" + settingKey + "]."));
         }
-        for (final String acceptedValue : new String[] { "elasticsearch,other" }) {
+        for (final String acceptedValue : new String[] { "elasticsearch", "elasticsearch,other" }) {
             final Settings settings = Settings.builder().put(settingKey, acceptedValue).build();
             final List<String> actualValue = this.buildConfig(settings).getSetting(setting);
-            assertThat(actualValue, equalTo(List.of("elasticsearch", "other")));
+            assertThat(actualValue, equalTo(Arrays.asList(acceptedValue.split(",", -1))));
         }
     }
 
@@ -168,7 +173,7 @@ public class JwtRealmSettingsTests extends ESTestCase {
     }
 
     public void testPopulateUserMetadata() {
-        Setting.AffixSetting<Boolean> setting = JwtRealmSettings.POPULATE_USER_METADATA;
+        final Setting.AffixSetting<Boolean> setting = JwtRealmSettings.POPULATE_USER_METADATA;
         final String settingKey = RealmSettings.getFullSettingKey(REALM_NAME, setting);
         for (final String rejectedValue : new String[] { "", "unknown", "t", "f", "TRUE", "FALSE", "True", "False" }) {
             final Exception exception = expectThrows(IllegalArgumentException.class, () -> {
@@ -194,7 +199,7 @@ public class JwtRealmSettingsTests extends ESTestCase {
     }
 
     public void testClientAuthenticationType() {
-        Setting.AffixSetting<String> setting = JwtRealmSettings.CLIENT_AUTHENTICATION_TYPE;
+        final Setting.AffixSetting<String> setting = JwtRealmSettings.CLIENT_AUTHENTICATION_TYPE;
         final String settingKey = RealmSettings.getFullSettingKey(REALM_NAME, setting);
         for (final String rejectedValue : new String[] { "", "unknown" }) {
             final Exception exception = expectThrows(IllegalArgumentException.class, () -> {
@@ -216,6 +221,48 @@ public class JwtRealmSettingsTests extends ESTestCase {
             final Settings settings = Settings.builder().put(settingKey, acceptedValue).build();
             final String actualValue = this.buildConfig(settings).getSetting(setting);
             assertThat(actualValue, equalTo(acceptedValue));
+        }
+    }
+
+    public void testAuthorizationRealms() {
+        final Setting.AffixSetting<List<String>> setting = DelegatedAuthorizationSettings.AUTHZ_REALMS.apply(JwtRealmSettings.TYPE);
+        final String settingKey = RealmSettings.getFullSettingKey(REALM_NAME, setting);
+        for (final String ignoredValue : new String[] { null, "" }) {
+            final Settings settings = Settings.builder().put(settingKey, ignoredValue).build();
+            final List<String> actualValue = this.buildConfig(settings).getSetting(setting);
+            assertThat(actualValue, equalTo(List.of()));
+        }
+        for (final String acceptedValue : new String[] { "a", "1", "native1,file1,ldap1,ad1" }) {
+            final Settings settings = Settings.builder().put(settingKey, acceptedValue).build();
+            final List<String> actualValue = this.buildConfig(settings).getSetting(setting);
+            assertThat(actualValue, equalTo(Arrays.asList(acceptedValue.split(",", -1))));
+        }
+    }
+
+    public void testSecureStrings() {
+        for (final Setting.AffixSetting<SecureString> setting : List.of(
+            JwtRealmSettings.ISSUER_HMAC_SECRET_KEY,
+            JwtRealmSettings.CLIENT_AUTHENTICATION_SHARED_SECRET
+        )) {
+            final String settingKey = RealmSettings.getFullSettingKey(REALM_NAME, setting);
+            for (final String rejectedValue : new String[] { null }) {
+                final Exception exception = expectThrows(NullPointerException.class, () -> {
+                    final MockSecureSettings secureSettings = new MockSecureSettings();
+                    secureSettings.setString(settingKey, rejectedValue);
+                    final SecureString actualValue = secureSettings.getString(settingKey);
+                    fail("No exception. Expected one for " + settingKey + "=" + rejectedValue + ". Got " + actualValue + ".");
+                });
+                assertThat(
+                    exception.getMessage(),
+                    equalTo("Cannot invoke \"String.getBytes(java.nio.charset.Charset)\" because \"value\" is null")
+                );
+            }
+            for (final String acceptedValue : new String[] { "", "abc123", "a", "1" }) {
+                final MockSecureSettings secureSettings = new MockSecureSettings();
+                secureSettings.setString(settingKey, acceptedValue);
+                final SecureString actualValue = secureSettings.getString(settingKey);
+                assertThat(actualValue, equalTo(acceptedValue));
+            }
         }
     }
 
@@ -264,7 +311,8 @@ public class JwtRealmSettingsTests extends ESTestCase {
             JwtRealmSettings.HTTP_MAX_ENDPOINT_CONNECTIONS
         )) {
             final String settingKey = RealmSettings.getFullSettingKey(REALM_NAME, setting);
-            for (final String rejectedValue : new String[] { "", "100_000" }) {
+            // If Integer parsing fails, " must be >= 0" is not appended to exception message.
+            for (final String rejectedValue : new String[] { "", "100_000", "NaN" }) {
                 final Exception exception = expectThrows(IllegalArgumentException.class, () -> {
                     final Settings settings = Settings.builder().put(settingKey, rejectedValue).build();
                     final Integer actualValue = this.buildConfig(settings).getSetting(setting);
@@ -275,6 +323,7 @@ public class JwtRealmSettingsTests extends ESTestCase {
                     equalTo("Failed to parse value [" + rejectedValue + "] for setting [" + settingKey + "]")
                 );
             }
+            // If Integer parsing succeeds, " must be >= 0" is appended to exception message.
             for (final String rejectedValue : new String[] { "-1", Integer.toString(Integer.MIN_VALUE) }) {
                 final Exception exception = expectThrows(IllegalArgumentException.class, () -> {
                     final Settings settings = Settings.builder().put(settingKey, rejectedValue).build();
@@ -299,25 +348,27 @@ public class JwtRealmSettingsTests extends ESTestCase {
         }
     }
 
-    // HELPER METHODS
-
-    private static void validateSettings(final RealmConfig realmConfig, final Set<Setting.AffixSetting<?>> settings) {
-        for (final Setting.AffixSetting<?> setting : settings) {
-            validateSetting(realmConfig, setting);
+    public void testAllSettings() {
+        final Settings settings = this.getAllSettingsWorking();
+        final RealmConfig config = this.buildConfig(settings);
+        for (final Setting.AffixSetting<?> setting : JwtRealmSettings.getNonSecureSettings()) {
+            config.getSetting(setting);
+        }
+        for (final Setting.AffixSetting<SecureString> setting : JwtRealmSettings.getSecureSettings()) {
+            config.getConcreteSetting(setting);
         }
     }
 
-    private static void validateSetting(final RealmConfig realmConfig, final Setting.AffixSetting<?> setting) {
-        realmConfig.getSetting(setting);
-    }
+    // HELPER METHODS
 
-    private RealmConfig getMockWorkingSettings() {
-        final Settings settings = Settings.builder()
+    private Settings getAllSettingsWorking() {
+        return Settings.builder()
             // Issuer settings
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.ALLOWED_ISSUER), "https://op.example.com")
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.ALLOWED_SIGNATURE_ALGORITHMS), "RS512")
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.ALLOWED_CLOCK_SKEW), randomIntBetween(1, 5) + "m")
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.JWKSET_PATH), "https://op.example.com/jwks.json")
+            .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.ISSUER_HMAC_SECRET_KEY), "base64mime")
             // Audience settings
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.ALLOWED_AUDIENCES), "rp_client1")
             // End-user settings
@@ -327,9 +378,13 @@ public class JwtRealmSettingsTests extends ESTestCase {
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.CLAIMS_GROUPS.getPattern()), "^(.*)$")
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.POPULATE_USER_METADATA), randomBoolean())
             // Client settings for incoming connections
-            .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.CLIENT_AUTHENTICATION_TYPE), "ssl")
+            .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.CLIENT_AUTHENTICATION_TYPE), "sharedsecret")
+            .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.CLIENT_AUTHENTICATION_SHARED_SECRET), "base64url")
             // Delegated authorization settings
-            .put(RealmSettings.getFullSettingKey(REALM_NAME, DelegatedAuthorizationSettings.AUTHZ_REALMS.apply("jwt")), "native1,file1")
+            .put(
+                RealmSettings.getFullSettingKey(REALM_NAME, DelegatedAuthorizationSettings.AUTHZ_REALMS.apply(JwtRealmSettings.TYPE)),
+                "native1,file1"
+            )
             // Cache settings
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.CACHE_TTL), randomIntBetween(10, 120) + "m")
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.CACHE_MAX_USERS), randomIntBetween(1000, 10000))
@@ -340,35 +395,49 @@ public class JwtRealmSettingsTests extends ESTestCase {
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.HTTP_MAX_CONNECTIONS), randomIntBetween(5, 20))
             .put(RealmSettings.getFullSettingKey(REALM_NAME, JwtRealmSettings.HTTP_MAX_ENDPOINT_CONNECTIONS), randomIntBetween(5, 20))
             // TLS settings for outgoing connections
-            .put(RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.TRUSTSTORE_TYPE.realm("jwt")), "PKCS12")
-            .put(RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.TRUSTSTORE_PATH.realm("jwt")), "ts2.p12")
-            // .put(RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.LEGACY_TRUSTSTORE_PASSWORD.realm("jwt")), "abc")
-            .put(RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.TRUSTSTORE_ALGORITHM.realm("jwt")), "PKIX")
-            .put(RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.TRUSTSTORE_TYPE.realm("jwt")), "PKCS12")
-            .put(RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.CERT_AUTH_PATH.realm("jwt")), "ca2.pem")
+            .put(
+                RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.TRUSTSTORE_TYPE.realm(JwtRealmSettings.TYPE)),
+                "PKCS12"
+            )
+            .put(
+                RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.TRUSTSTORE_PATH.realm(JwtRealmSettings.TYPE)),
+                "ts2.p12"
+            )
+            // .put(RealmSettings.getFullSettingKey(REALM_NAME,
+            // SSLConfigurationSettings.LEGACY_TRUSTSTORE_PASSWORD.realm(JwtRealmSettings.TYPE)), "abc")
+            .put(
+                RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.TRUSTSTORE_ALGORITHM.realm(JwtRealmSettings.TYPE)),
+                "PKIX"
+            )
+            .put(
+                RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.TRUSTSTORE_TYPE.realm(JwtRealmSettings.TYPE)),
+                "PKCS12"
+            )
+            .put(
+                RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.CERT_AUTH_PATH.realm(JwtRealmSettings.TYPE)),
+                "ca2.pem"
+            )
             // Secure settings
             .setSecureSettings(this.getMockWorkingSecretSettings())
             .build();
-        return this.buildConfig(settings);
     }
 
     private MockSecureSettings getMockWorkingSecretSettings() {
+        final Setting.AffixSetting<SecureString> setting = SSLConfigurationSettings.TRUSTSTORE_PASSWORD.realm(JwtRealmSettings.TYPE);
+        final String settingKey = RealmSettings.getFullSettingKey(REALM_NAME, setting);
         final MockSecureSettings secureSettings = new MockSecureSettings();
-        secureSettings.setString(
-            RealmSettings.getFullSettingKey(REALM_NAME, SSLConfigurationSettings.TRUSTSTORE_PASSWORD.realm("jwt")),
-            "abc"
-        );
+        secureSettings.setString(settingKey, "abc");
         return secureSettings;
     }
 
-    private RealmConfig buildConfig(Settings realmSettings) {
-        final RealmConfig.RealmIdentifier realmIdentifier = new RealmConfig.RealmIdentifier("jwt", REALM_NAME);
+    private RealmConfig buildConfig(final Settings realmSettings) {
+        final RealmConfig.RealmIdentifier realmIdentifier = new RealmConfig.RealmIdentifier(JwtRealmSettings.TYPE, REALM_NAME);
         final Settings settings = Settings.builder()
-            .put("path.home", createTempDir())
+            .put("path.home", this.pathHome)
             .put(realmSettings)
             .put(RealmSettings.getFullSettingKey(realmIdentifier, RealmSettings.ORDER_SETTING), 0)
             .build();
         final Environment env = TestEnvironment.newEnvironment(settings);
-        return new RealmConfig(realmIdentifier, settings, env, threadContext);
+        return new RealmConfig(realmIdentifier, settings, env, this.threadContext);
     }
 }
